# deid-examples

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
Azure Template/: azuredeploy.json  azuredeploy.parameters.sample.json  azuredeploy_readme.md
CloudFormation/: cluster.yaml  security-groups.yaml  service.yaml
CloudFormation/ECS automated/: README.md  cluster.yaml  main.yaml  security-groups.yaml  service.yaml  values.yaml
docker-compose/OCR Examples/: DEPLOYMENT.md  docker-compose-deid-cloud-cv.yml  docker-compose-deid-cloud-doc-intelligence.yml  docker-compose-deid-local-cv.yml
js/: .env.example  .gitignore  README.md  package-lock.json  package.json
js/examples/: batching.js  enabled_classes.js  fake_entity_generation.js  masked_pii_markers.js  non_unique_pii_markers.js  private_ai_demo_server.js  process_file_base64.js  process_file_uri.js  sample.txt  synthetic_entity_generation.js  unique_pii_markers.js
js/websocket_app/: README.md  index.html  package-lock.json  package.json  prettier.config.js
postman/: Private AI Cookbook.postman_collection.json  README.md
powershell/examples/: process_directory.ps1  process_file.ps1  process_text.ps1
python/: .env.example  .gitignore  README.md  requirements.txt
python/LLM Examples/: PAI-Cohere.ipynb  PAI-PaLM.ipynb  PrivateAI_QA_finetune.ipynb  Removing Confidential Financial Information via Redaction for LLMs.ipynb  Removing MNPI via Redaction for LLMs.ipynb  demo_config.py  secure_prompt.py  secure_prompt_from_file.py  secure_prompy_from_file.py
(+58 files in other folders)
