[tool.poetry]
name = "deid-examples"
version = "0.1.0"
description = ""
authors = ["Onur Cayci <onur@private-ai.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
